--- a/blogposts/templates/base.html
+++ b/blogposts/templates/base.html
@@ -7,7 +7,7 @@
     <title>{%block title%} {%endblock%}</title>
 </head>
 <body>
-    {% block body %}
+    {% block content %}
 
     {% endblock %}
 </body>
