--- a/blogposts/templates/registration/login.html
+++ b/blogposts/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
 <form action="." method="post">
     {% csrf_token %}
     {{ form.as_p }}
