function to create new post; automatically get user as author

--- a/blogposts/templates/blogposts/template.html
+++ b/blogposts/templates/blogposts/template.html
@@ -7,6 +7,47 @@
     <title>Blog-ish</title>
 </head>
 <body>
-    There are {{count}} post(s) available to read.
+    {% block content %}
+        {% if request.user.is_authenticated %}
+            <h4 class="welcome">
+                Welcome to Red Monstera!
+            </h4>
+            <p class="you-are">You are logged in as {{ request.user.username }}.<a href="{% url 'auth_logout' %}" class="not-you">Not you?</a></p>
+
+            <p class="post-count">There are {{ count }} blogposts available to read.</p>
+
+            <a href="{% url 'new_post' %}" class="btn new-btn">Create a Post</a>
+
+            <div class="post-container flex">
+                {% for post in posts %}
+                    <div class="post-item">
+                        <a href="{% url 'post' post.id %}" class="post-link">{{ post.title }}</a>
+                        <p class="post-author">{{ post.author }}</p>
+                        <p class="post-date">{{ post.publish_date }}</p>
+                    </div>
+                {% endfor %}
+            </div>
+        {% else %}
+            <h4 class="welcome">
+                Welcome to Red Monstera!
+            </h4>
+
+            <p class="login-cta">
+                Please <a href="{% url 'auth_login' %}" class="login-link">Login</a> to create, edit, or delete a post.
+            </p>
+
+            <p class="post-count">There are {{ count }} blogposts available to read.</p>
+
+            <div class="post-container flex">
+                {% for post in posts %}
+                    <div class="post-item">
+                        <a href="{% url 'post' post.id %}" class="post-link">{{ post.title }}</a>
+                        <p class="post-author">{{ post.author }}</p>
+                        <p class="post-date">{{ post.publish_date }}</p>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endblock %}
 </body>
 </html>
