--- a/blogposts/templates/blogposts/post.html
+++ b/blogposts/templates/blogposts/post.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+    <div class="container">
+        <h1>{{ post.title }}</h1>
+        <p>{{ post.author}} ({{ post.publish_date }})</p>
+        <p>{{ post.text }}</p>
+    </div>
 {% endblock %}
