--- a/blogposts/templates/blogposts/post.html
+++ b/blogposts/templates/blogposts/post.html
@@ -1,17 +1,37 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container">
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.author}} ({{ post.publish_date }})</p>
-        <p>{{ post.text }}</p>
+<div class="container">
+    <h1>{{ post.title }}</h1>
+    <p>{{ post.author}} ({{ post.publish_date }})</p>
+    <p>{{ post.text }}</p>
 
-        {% if user.is_authenticated and post.author.id == user.id %}
-            <a href="{% url 'edit_post' post.id %}" class="btn edit-btn">Edit Post</a>
+    {% if user.is_authenticated and post.author.id == user.id %}
+    <a href="{% url 'edit_post' post.id %}" class="btn edit-btn">Edit Post</a>
 
-            <a href="{% url 'delete_post' post.id %}" class="btn delete-btn">Delete Post</a>
-        {% endif %}
-        
-        <a href="{% url 'index' %}" class="btn home-btn">Home</a>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Delete Post
+    </button>
+      
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Delete Post?</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure? Deletion is a <strong>permanent</strong> action and cannot be undone!
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <a href="{% url 'delete_post' post.id %}" class="btn delete-btn">Delete Post</a>
+                </div>
+            </div>
+        </div>
     </div>
+    {% endif %}
+    
+    <a href="{% url 'index' %}" class="btn home-btn">Home</a>
+</div>
 {% endblock %}
