--- a/blogposts/static/css/main.css
+++ b/blogposts/static/css/main.css
@@ -1,6 +1,12 @@
+/* UTILITIES */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Inria Sans', sans-serif;
 }
 
+/* NAVBAR */
+.navbar {
+    background-color: rgba(205, 198, 174, 0.5);
+}
