--- a/blogposts/templates/base.html
+++ b/blogposts/templates/base.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}">
-
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap-grid.min.css' %}">
-
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     <script src="https://kit.fontawesome.com/6f2d2a6171.js" crossorigin="anonymous"></script>
@@ -18,10 +20,10 @@
 </head>
 <body>
     {% if request.user.is_authenticated %}
-    <nav class="navbar navbar-expand-lg bg-light mx-auto py-0">
+    <nav class="navbar navbar-expand-lg mx-auto py-0">
         <div class="container-fluid">
             <a href="{% url 'index' %}" class="navbar-brand">
-                <p class="blogish-logo">BLOGISH</p>
+                <p class="blogish-logo">blogish</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,10 +49,10 @@
         </div>
     </nav>
     {% else %}
-    <nav class="navbar navbar-expand-lg bg-light mx-auto py-0">
+    <nav class="navbar navbar-expand-lg mx-auto py-0">
         <div class="container-fluid">
             <a href="{% url 'index' %}" class="navbar-brand">
-                <p class="blogish-logo">BLOGISH</p>
+                <p class="blogish-logo">blogish</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
