--- a/blogposts/templates/blogposts/delete_post.html
+++ b/blogposts/templates/blogposts/delete_post.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Post Deleted - Blogish {% endblock %}
+
 {% block content %}
     <div class="container">
         <h1 class="delete-msg">Your post has been deleted.</h1>
