--- a/blogposts/templates/blogposts/new_post.html
+++ b/blogposts/templates/blogposts/new_post.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Create A Post - Blogish {% endblock %}
+
 {% block content %}
 <div class="container">
     <h1>Create a New Post</h1>
