--- a/blogposts/templates/blogposts/post.html
+++ b/blogposts/templates/blogposts/post.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} {{ post.title }} - Blogish {% endblock %}
+
 {% block content %}
 <div class="container">
     <h1>{{ post.title }}</h1>
