--- a/blogposts/templates/registration/login.html
+++ b/blogposts/templates/registration/login.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Login - Blogish {% endblock %}
+
 {% block content %}
 <form action="." method="post">
     {% csrf_token %}
