--- a/blogposts/templates/registration/logout.html
+++ b/blogposts/templates/registration/logout.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} Logged Out - Blogish {% endblock %}
+
 {% block content %} 
 <h1>See you soon!</h1>
 {% endblock %}
