--- a/blogposts/static/css/main.css
+++ b/blogposts/static/css/main.css
@@ -6,7 +6,85 @@
     font-family: 'Inria Sans', sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: rgba(44, 66, 81, 0.90);
+}
+
+a:hover {
+    color: inherit;
+    text-decoration: underline;
+}
+
+.flex {
+    display: flex;
+}
+
 /* NAVBAR */
 .navbar {
     background-color: rgba(205, 198, 174, 0.5);
+    font-size: 20px;
+}
+
+.nav-container {
+    padding: 0.5rem;
+}
+
+.blogish-logo {
+    color: #2C4251;
+    cursor: pointer;
+    font-weight: 700;
+}
+
+.nav-link {
+    color: #000;
+    border: 5px solid transparent;
+    border-radius: 5px;
+    margin: 0 0.5rem;
+    padding: 1px;
+}
+
+.nav-link:hover {
+    background-color: #2C4251;
+    color: #FFF;
+}
+
+/* TEMPLATE */
+.page-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.post-item {
+    background-color:rgba(205, 198, 174, 0.5);
+    border: 5px solid #2C4251;
+    border-radius: 15px;
+    padding: 1rem;
+    width: 200px;
+    height: 200px;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.post-item > * {
+    margin-bottom: 2px;
+}
+
+.post-link {
+    font-size: 20px;
+    font-weight: 700;
+    color: rgba(44, 66, 81, 0.85);
+}
+
+.post-link:hover {
+    color: #2C4251;
+}
+
+.post-author {
+    font-style: italic;
+}
+
+.post-date {
+    color: rgba(0, 0, 0, 0.50);
 }
