--- a/blogposts/templates/base.html
+++ b/blogposts/templates/base.html
@@ -22,9 +22,7 @@
     {% if request.user.is_authenticated %}
     <nav class="navbar navbar-expand-lg mx-auto py-0">
         <div class="container-fluid">
-            <a href="{% url 'index' %}" class="navbar-brand">
-                <p class="blogish-logo">blogish</p>
-            </a>
+            <a href="{% url 'index' %}" class="blogish-logo">blogish</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -50,10 +48,8 @@
     </nav>
     {% else %}
     <nav class="navbar navbar-expand-lg mx-auto py-0">
-        <div class="container-fluid">
-            <a href="{% url 'index' %}" class="navbar-brand">
-                <p class="blogish-logo">blogish</p>
-            </a>
+        <div class="nav-container container-fluid">
+            <a href="{% url 'index' %}" class="blogish-logo">blogish</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
