--- a/blogposts/static/css/main.css
+++ b/blogposts/static/css/main.css
@@ -8,12 +8,23 @@
 
 a {
     text-decoration: none;
-    color: rgba(44, 66, 81, 0.90);
 }
 
 a:hover {
-    color: inherit;
+   text-decoration: underline;
+}
+
+.btn {
+    color: #FFF;
+    background-color: rgba(44, 66, 81, 0.90);
+    border-radius: 5px;
+}
+
+.btn:hover {
+    color: #FFF;
+    background-color: #2C4251;
     text-decoration: underline;
+    border-radius: 5px;
 }
 
 .flex {
@@ -36,6 +47,11 @@ a:hover {
     font-weight: 700;
 }
 
+.blogish-logo:hover {
+    color: #2C4251;
+    text-decoration: none;
+}
+
 .nav-link {
     color: #000;
     border: 5px solid transparent;
@@ -47,13 +63,29 @@ a:hover {
 .nav-link:hover {
     background-color: #2C4251;
     color: #FFF;
+    text-decoration: none;
 }
 
 /* TEMPLATE */
+.welcome {
+    margin-top: 1rem;
+}
+
 .page-container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.new-btn {
+    margin-bottom: 1rem;
+}
+
+.post-container {
+    margin: auto 2rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1.5rem;
 }
 
 .post-item {
@@ -61,8 +93,8 @@ a:hover {
     border: 5px solid #2C4251;
     border-radius: 15px;
     padding: 1rem;
-    width: 200px;
-    height: 200px;
+    width: 225px;
+    height: 150px;
     flex-direction: column;
     justify-content: center;
 }
@@ -72,7 +104,7 @@ a:hover {
 }
 
 .post-link {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 700;
     color: rgba(44, 66, 81, 0.85);
 }
