--- a/blogposts/templates/base.html
+++ b/blogposts/templates/base.html
@@ -21,7 +21,7 @@
 <body>
     {% if request.user.is_authenticated %}
     <nav class="navbar navbar-expand-lg mx-auto py-0">
-        <div class="container-fluid">
+        <div class="nav-container container-fluid">
             <a href="{% url 'index' %}" class="blogish-logo">blogish</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
