--- a/blogposts/static/css/main.css
+++ b/blogposts/static/css/main.css
@@ -27,6 +27,11 @@ a:hover {
     border-radius: 5px;
 }
 
+.btn:active {
+    background-color: #2C4251;
+    border: 1px solid #2C4251;
+}
+
 .flex {
     display: flex;
 }
