--- a/blogposts/templates/base.html
+++ b/blogposts/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap-grid.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/post.css' %}">
 
     <script src="https://kit.fontawesome.com/6f2d2a6171.js" crossorigin="anonymous"></script>
 
