--- a/blogposts/templates/blogposts/edit_post.html
+++ b/blogposts/templates/blogposts/edit_post.html
@@ -3,28 +3,25 @@
 {% block title %} Edit Post - Blogish {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container edit-container">
         <h1>Edit Your Post</h1>
         <form action="/post/{{ post.id }}/update" method="POST">
             {% csrf_token %}
             {% if request.method == 'GET' %}
                 <div class="form-row">
-                    <label>
-                        Title:
-                        <input type="text" name="title" value="{{ post.title }}" class="post-title">
-                    </label>
+                    <label class="title-lbl">Title:</label>
+                    <input type="text" name="title" value="{{ post.title }}" class="post-title">
                 </div>
                 <div class="form-row">
                     <p class="author">Author: <span class="user-box">{{ user }}</span></p>
                 </div>    
                 <div class="form-row">
-                    <label>
-                        Text:
-                        <textarea name="text" cols="30" rows="10" class="post-text">{{ post.text }}</textarea>
-                    </label>
+                    <label class="text-lbl">Text:</label>
+                    <textarea name="text" cols="30" rows="8" class="post-text">{{ post.text }}</textarea>
                 </div>
             {% endif %}
-            <button type="submit" class="btn save-btn">Save</button>
+            <button type="submit" class="btn save-btn">Save Post</button>
         </form>
+        <a href="{% url 'index' %}" class="btn home-btn">Home</a>
     </div>
 {% endblock %}
