--- a/blogposts/templates/blogposts/template.html
+++ b/blogposts/templates/blogposts/template.html
@@ -31,7 +31,7 @@
                 Welcome to BLOGISH!
             </h4>
 
-            <p class="login-cta">
+            <p class="login-action">
                 Please <a href="{% url 'auth_login' %}" class="login-link">Login</a> to create, edit, or delete a post.
             </p>
 
