adjusted alignment and styling for registration-related pages

--- a/blogposts/static/css/post.css
+++ b/blogposts/static/css/post.css
@@ -58,12 +58,12 @@
 }
 
 /* DELETE POST */
-.del-container {
+.action-container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.delete-msg {
+.action-msg {
     margin-bottom: 1rem;
 }
