--- a/blogposts/templates/base.html
+++ b/blogposts/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="{% static 'css/post.css' %}">
     <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+    <link rel="stylesheet" href="{% static 'css/auxiliary.css' %}">
 
     <script src="https://kit.fontawesome.com/6f2d2a6171.js" crossorigin="anonymous"></script>
 
@@ -34,10 +35,10 @@
                     <a class="nav-link" aria-current="page" href="{% url 'index' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">About</a>
+                    <a class="nav-link" href="{% url 'about_contact' %}">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                    <a class="nav-link" href="{% url 'about_contact' %}">Contact</a>
                 </li>
                 </ul>
                 <ul class="navbar-nav me-2 mb-1 mb-lg-0">
@@ -61,10 +62,10 @@
                     <a class="nav-link" aria-current="page" href="{% url 'index' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">About</a>
+                    <a class="nav-link" href="{% url 'about_contact' %}">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                    <a class="nav-link" href="{% url 'about_contact' %}">Contact</a>
                 </li>
                 </ul>
                 <ul class="navbar-nav me-2 mb-1 mb-lg-0">
