--- a/blogposts/templates/blogposts/about_contact.html
+++ b/blogposts/templates/blogposts/about_contact.html
@@ -3,11 +3,23 @@
 {% block title %} About & Contact - Blogish {% endblock %}
 
 {% block content %}
-    <div class="container flex">
-        <h2>About Blogish</h2>
+    <div class="container aux-container flex">
+        <h2 class="aux-title">About Blogish</h2>
+        <p class="aux-text">Thank you for viewing Blogish, a simple blogging app, created with Django! Users of the app can create an account* in order to create, edit, and delete posts. Users who do not wish to do any of these actions can simply view the currently available posts.</p>
+        <p class="fine-text">*The registration form requires an email to be entered, however, there is no email confirmation. A random string of letters (ex: aaa@bbb.cc) will suffice.</p>
+        <p class="aux-text">
+            <a href="https://github.com/codebygrace/blogish" target=_blank class="aux-link about-link">Click here</a> to view the Blogish repository.
+        </p>
     </div>
 
-    <div class="container flex">
-        <h2>Contact</h2>
+    <div class="container aux-container flex">
+        <h2 class="aux-title">Contact</h2>
+        <p class="aux-text">You can contact the admin of Blogish via:</p>
+            <div class="contact-items flex">
+                <a href="https://github.com/codebygrace" target=_blank class="aux-link">Github</a>
+                <a href="https://www.linkedin.com/in/codebygrace/" target=_blank class="aux-link">LinkedIn</a>
+                <a href="https://twitter.com/codebygrace" target=_blank class="aux-link">Twitter</a>
+                <a href="https://www.instagram.com/code.bygrace" target=_blank class="aux-link">Instagram</a>
+            </div>
     </div>
 {% endblock %}
