--- a/blogposts/templates/base.html
+++ b/blogposts/templates/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{% static 'css/post.css' %}">
     <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
     <link rel="stylesheet" href="{% static 'css/auxiliary.css' %}">
+    <link rel="stylesheet" href="{% static 'css/media.css' %}">
 
     <title>{% block title %} Welcome to Blogish! {% endblock %}</title>
 </head>
