--- a/blogposts/templates/blogposts/about_contact.html
+++ b/blogposts/templates/blogposts/about_contact.html
@@ -3,16 +3,16 @@
 {% block title %} About & Contact - Blogish {% endblock %}
 
 {% block content %}
-    <div class="container aux-container flex">
+    <div class="aux-container flex">
         <h2 class="aux-title">About Blogish</h2>
         <p class="aux-text">Thank you for viewing Blogish, a simple blogging app, created with Django! Users of the app can create an account* in order to create, edit, and delete posts. Users who do not wish to do any of these actions can simply view the currently available posts.</p>
         <p class="fine-text">*The registration form requires an email to be entered, however, there is no email confirmation. A random string of letters (ex: aaa@bbb.cc) will suffice.</p>
         <p class="aux-text">
-            <a href="https://github.com/codebygrace/blogish" target=_blank class="aux-link about-link">Click here</a> to view the Blogish repository.
+            <a href="https://github.com/codebygrace/blogish" target=_blank class="about-link">Click here</a> to view the Blogish repository on Github.
         </p>
     </div>
 
-    <div class="container aux-container flex">
+    <div class="aux-container flex">
         <h2 class="aux-title">Contact</h2>
         <p class="aux-text">You can contact the admin of Blogish via:</p>
             <div class="contact-items flex">
