--- a/blogposts/templates/registration/login.html
+++ b/blogposts/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block title %} Login - Blogish {% endblock %}
 
 {% block content %}
-    <div class="container account-container flex">
+    <div class="page-container account-container flex">
         <h1 class="account-title">Login to Blogish</h1>
         <div class="form-container">
             <form class="login-form flex" action="." method="post">
