--- a/blogposts/templates/registration/logout.html
+++ b/blogposts/templates/registration/logout.html
@@ -3,7 +3,7 @@
 {% block title %} Logged Out - Blogish {% endblock %}
 
 {% block content %} 
-    <div class="action-container container flex">
+    <div class="action-container page-container flex">
         <h1 class="action-msg">See you soon!</h1>
         <a href="{% url 'index' %}" class="btn home-btn">Home</a>
     </div>
