--- a/blogposts/static/css/auxiliary.css
+++ b/blogposts/static/css/auxiliary.css
@@ -1,7 +1,9 @@
+/* UTILITIES */
 .aux-container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 2rem;
 }
 
 .aux-title {
@@ -18,6 +20,10 @@
     margin: 1rem;
 }
 
+.fine-text {
+    padding-left: 0.5rem;
+}
+
 .about-link {
     font-size: 20px;
     margin: 0;
@@ -26,4 +32,5 @@
 .contact-items {
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
