--- a/blogposts/templates/registration/registration_form.html
+++ b/blogposts/templates/registration/registration_form.html
@@ -3,7 +3,7 @@
 {% block title %} Sign Up - Blogish {% endblock %}
 
 {% block content %} 
-<div class="container account-container register-container flex">
+<div class="page-container account-container register-container flex">
     <h1 class="account-title">Sign Up for Blogish</h1>
     <div class="form-container">
         <form class="register-form flex" action="" method="post">
